# cross-compile

./: .gitignore  CMakeLists.txt  CrossConfig.h.in  License.txt  README.md  ico.rc  main.cpp
MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cpp
